--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,9 +59,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/rice fields.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -77,12 +76,13 @@ flutter:
   fonts:
     - family: Mali
       fonts:
-        - asset: Fonts/Mali-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+        - asset: Fonts//Mali-Regular.ttf
+    - family: Kanit
+      fonts:
+        - asset: Fonts//Kanit-Regular.ttf
+    - family: Itim
+      fonts:
+        - asset: Fonts//Itim-Regular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
